Primer push para app de buscador de noticias con vanilla javascript

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
     <header class="site-header">
       <div class="wrapper">
         <nav class="main-menu">
-          <h1>cristhianjhl's news</h1>
+          <h1>NEWS DEV</h1>
+
         </nav>
       </div>
     </header>
@@ -27,7 +28,16 @@
       <div class="wrapper">
         <div class="site-container">
           <div class="categories-menu" id="categories-menu">
-            <form id="category-form"></form>
+            <form>
+              <div class="form-group">
+                <label for="categoryList">Elegi una categoría:</label>
+                <select id="categoryList" name="categoryList"></select>
+              </div>
+              <div class="form-group">
+                <label for="countryList">Elegi un País:</label>
+                <select id="countryList" name="countryList"></select>
+              </div>
+            </form>
           </div>
           <section class="news-container" id="news-container"></section>
         </div>
